# downloadmanager

./: Cargo.toml  main.py
src/: app.rs  download.rs  downloader.rs  main.rs  widget.rs
src/downloader/: entry.rs  manager.rs  mod.rs  worker.rs
