[package]
name = "downloadmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dns-lookup = "2.0.4"
eframe = "0.27.2"
notify-rust = "4.11.0"
open = "5.1.4"
openssl = "0.10.64"
rfd = "0.14.1"
url = "2.5.1"
whoami = "1.5.1"
