[package]
name = "downloadmanager2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
open = "5.1.4"
reqwest = "0.12.4"
rfd = "0.14.1"
tokio = { version = "1.38.0", features = ["full"] }
url = "2.5.1"
whoami = "1.5.1"
